After min_spanning_tree,draw new graph

--- a/cpp_code/CMakeLists.txt
+++ b/cpp_code/CMakeLists.txt
@@ -23,6 +23,9 @@ set(file_list
 	ssconfig.hpp
 	#
 	simple_svg.hpp
+	#plan
+	Splan.hpp
+	Splan.cpp
 )
 
 IF(WIN32)
@@ -50,6 +53,7 @@ message(${PROJECT_BINARY_DIR})
 #生成DLL
 add_executable(coveragePathPlan ${file_list})
 add_executable(primTest prim.cpp)
+add_executable(svgTest tutorial_svg.cpp simple_svg.hpp)
 #add_executable(test_pathplan  ${PROJECT_LIB_DIR}/${file_list})
 
 #add_library(coveragePathPlan  SHARED ${file_list})
